force-app/main/default/objects/Account/fields/ABN__ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__ABN__c</fullName>
    <description>Company ABN for validation</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Company ABN for validation</inlineHelpText>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>