force-app/main/default/objects/Account/fields/ABN_Tax_Reference__c.field-meta.xml
<CustomField>
    <fullName>ABN_Tax_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Record the ABN/Tax Reference Number with no spaces.</inlineHelpText>
    <label>ABN / Tax Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>