force-app/main/default/objects/Account/fields/ABTA_Number__c.field-meta.xml
<CustomField>
    <fullName>ABTA_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Applicable only for UK &amp; Ireland Accounts</inlineHelpText>
    <label>ABTA Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>