force-app/main/default/objects/Account/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <description>To capture acronyms</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To capture acronyms</inlineHelpText>
    <label>Account Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>