force-app/main/default/objects/Account/fields/Account_Chain_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Chain_Code__c</fullName>
    <description>To capture chain code for Agency Accounts</description>
    <label>Account Chain Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC - American Express Consumer Travel</fullName>
            </value>
            <value>
                <fullName>BT - BTI Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>