force-app/main/default/objects/Account/fields/Account_Chain_Code_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Chain_Code_f__c</fullName>
    <formula>Agency_Sales_Region__r.Brand_Code__c</formula>
    <label>Brand Code</label>
    <type>Text</type>
</CustomField>