force-app/main/default/objects/Account/fields/Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>Account_Domain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Domain</label>
    <length>40</length>
    <type>Text</type>
</CustomField>