force-app/main/default/objects/Account/fields/Account_Manager_Check__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Check__c</fullName>
    <description>For Freight used for auditing to check whether Country Account Manager = Branch Account Manager</description>
    <formula>IF (  AND ( ISPICKVAL (  Type , &quot;Freight-Branch&quot; ) , ISPICKVAL (  Parent.Type , &quot;Freight-Country&quot; ), OwnerId &lt;&gt;  Parent.OwnerId ,  BillingCountry =  Parent.BillingCountry ) ,&quot;Different Account Manager&quot;,&quot;Same Account Manager&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Check</label>
    <type>Text</type>
</CustomField>