force-app/main/default/objects/Account/fields/Account_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Account_Revenue__c</fullName>
    <label>QF Account Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>