force-app/main/default/objects/Account/fields/Account_Review_Completed_Last_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Account_Review_Completed_Last_90_Days__c</fullName>
    <description>Formula to calculate if the account review is done in the last 90 days</description>
    <formula>IF((DATEVALUE(NOW()) - DATEVALUE(Last_Completed_Account_Review__c))&lt;=90, 1, 0)</formula>
    <label>Account Review Completed Last 90 Days?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>