force-app/main/default/objects/Account/fields/Account_Skill_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Skill_Group__c</fullName>
    <description>To capture Skill group for Agency Accounts</description>
    <label>Account Skill Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALPHA</fullName>
            </value>
            <value>
                <fullName>BRAVO</fullName>
            </value>
            <value>
                <fullName>CHARLIE</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
            </value>
            <value>
                <fullName>ECHO</fullName>
            </value>
            <value>
                <fullName>FOXTROT</fullName>
            </value>
            <value>
                <fullName>GOLF</fullName>
            </value>
            <value>
                <fullName>HUGO</fullName>
            </value>
            <value>
                <fullName>INDIGO</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>KILO</fullName>
            </value>
            <value>
                <fullName>LIMA</fullName>
            </value>
            <value>
                <fullName>PAPA</fullName>
            </value>
            <value>
                <fullName>SBT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>