force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <inlineHelpText>Prospect - Corporate Account not on a deal, Customer - Corporate account on a deal and Agency - An Industry Account</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industry (agency)</fullName>
            </value>
            <value>
                <fullName>Corporate (customer)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>