force-app/main/default/objects/Account/fields/AccreditationStatus__c.field-meta.xml
<CustomField>
    <fullName>AccreditationStatus__c</fullName>
    <label>Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Active - No BSP</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
            <value>
                <fullName>S</fullName>
                <isActive>false</isActive>
                <label>S</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>