force-app/main/default/objects/Account/fields/AccreditationType__c.field-meta.xml
<CustomField>
    <fullName>AccreditationType__c</fullName>
    <label>Accreditation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IATA</fullName>
            </value>
            <value>
                <fullName>TIDS</fullName>
            </value>
            <value>
                <fullName>ARC</fullName>
            </value>
            <value>
                <fullName>VTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>