force-app/main/default/objects/Account/fields/Acquire_Number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Acquire_Number_of_employees__c</fullName>
    <description>This field is auto-populated from Aquire profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>