force-app/main/default/objects/Account/fields/Acquire_Street__c.field-meta.xml
<CustomField>
    <fullName>Acquire_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>