force-app/main/default/objects/Account/fields/Active_QBD_Products_rollup__c.field-meta.xml
<CustomField>
    <fullName>Active_QBD_Products_rollup__c</fullName>
    <description>for Active: QBD Registration</description>
    <label>Active QBD Products # [System]</label>
    <summaryFilterItems>
        <field>Product_Registration__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Product_Registration__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>QBD Registration</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Registration__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>