force-app/main/default/objects/Account/fields/Activity_Created_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Activity_Created_Last_30_Days__c</fullName>
    <description>Returns whether Account has Activity created in the Last 30 Days</description>
    <formula>IF ( AND ( No_of_Days_Since_Last_Created_Activity__c  &lt;= 30 ,  No_of_Days_Since_Last_Created_Activity__c &gt;= 0) , 1,0)</formula>
    <label>Activity Created Last 30 Days?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>