force-app/main/default/objects/Account/fields/Actual_MS_Incremental__c.field-meta.xml
<CustomField>
    <fullName>Actual_MS_Incremental__c</fullName>
    <formula>IF(QF_Revenue_LY__c!=0,((QF_Revenue__c/Total_Air_Travel_Spend__c)-( QF_Revenue_LY__c/ Total_Air_Travel_Spend_LY__c)),IF(QF_Revenue__c=0,0,((QF_Revenue__c/Total_Air_Travel_Spend__c)- ( Estimated_Total_Annual_Revenue__c/Estimated_Total_Air_Travel_Spend__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual MS Incremental</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>