force-app/main/default/objects/Account/fields/Address2_System__c.field-meta.xml
<CustomField>
    <fullName>Address2_System__c</fullName>
    <description>Field for QBD Report.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address2 [System]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>