force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>Is this an agency account? (Aquire)</description>
    <label>Travel Agent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>