force-app/main/default/objects/Account/fields/Agency_Category__c.field-meta.xml
<CustomField>
    <fullName>Agency_Category__c</fullName>
    <description>Should be an editable field. Options should include: 
- Retail / Leisure Agency
- Travel Management Company
- Consolidator
- Wholesaler</description>
    <label>Agency Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency Partnerships – Groups Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Consolidator</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Travel Management Company</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Entertainment Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Fly Cruise Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Marine Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – General Sales Agent</fullName>
            </value>
            <value>
                <fullName>Qantas Direct</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Leisure Agency</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – SME Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Student Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Inbound Tour Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships –  Ethnic Market Specialist</fullName>
            </value>
            <value>
                <fullName>Agency Partnerships – Wholesale Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>