force-app/main/default/objects/Account/fields/Agency_Product_Fare__c.field-meta.xml
<CustomField>
    <fullName>Agency_Product_Fare__c</fullName>
    <label>Agency Product Fare</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entertainment Fares</fullName>
            </value>
            <value>
                <fullName>Fly Cruise</fullName>
            </value>
            <value>
                <fullName>Humanitarian</fullName>
            </value>
            <value>
                <fullName>Marine Fares</fullName>
            </value>
            <value>
                <fullName>Student Fares</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Wholesale - Domestic</fullName>
            </value>
            <value>
                <fullName>Wholesale-International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>