force-app/main/default/objects/Account/fields/Agency_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sales_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Sales Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Region__c.sales_h_eq_type__c</field>
            <operation>equals</operation>
            <value>Corporate-Industry, Industry</value>
        </filterItems>
        <filterItems>
            <field>Sales_Region__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>The Brand value and associated Brand Code comes from the Sales Region master list. For the value to appear as a selectable it must be added to the Sales Region list first.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Region__c</referenceTo>
    <relationshipLabel>Agency Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>