force-app/main/default/objects/Account/fields/Agency_Sub_Chain__c.field-meta.xml
<CustomField>
    <fullName>Agency_Sub_Chain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Sub Chain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>