force-app/main/default/objects/Account/fields/Agency_TIDS_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_TIDS_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Travel Industry Designated Services Number</inlineHelpText>
    <label>Agency TIDS #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>