force-app/main/default/objects/Account/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <inlineHelpText>An Agency Partnerships Account</inlineHelpText>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IATA Agent</fullName>
            </value>
            <value>
                <fullName>Non IATA Agent</fullName>
            </value>
            <value>
                <fullName>GSA Agent (Route)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>