force-app/main/default/objects/Account/fields/Airline_Level__c.field-meta.xml
<CustomField>
    <fullName>Airline_Level__c</fullName>
    <description>Customer Account airline level calculated by and received from iFly (Aquire)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account airline level as set by Aquire</inlineHelpText>
    <label>Airline Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>