force-app/main/default/objects/Account/fields/Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Airport_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>