force-app/main/default/objects/Account/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To capture acronyms</inlineHelpText>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>