force-app/main/default/objects/Account/fields/Alliance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Airports</description>
    <label>Alliance Partner</label>
    <type>Checkbox</type>
</CustomField>