force-app/main/default/objects/Account/fields/AMEX__c.field-meta.xml
<CustomField>
    <fullName>AMEX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>American Express Qantas Co-brand Card</description>
    <inlineHelpText>American Express Qantas Co-brand Card</inlineHelpText>
    <label>AMEX</label>
    <type>Checkbox</type>
</CustomField>