force-app/main/default/objects/Account/fields/AMEX_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Company_Name__c</fullName>
    <description>This is auto-populated from AMEX profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AMEX Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>