force-app/main/default/objects/Account/fields/Amex_Country__c.field-meta.xml
<CustomField>
    <fullName>Amex_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>