force-app/main/default/objects/Account/fields/AMEX_Eligibility_Code_f__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Eligibility_Code_f__c</fullName>
    <description>Eligibility Code that gets sent to to AMEX.</description>
    <formula>CASE(AMEX_response_Code__c,
&quot;D&quot;,&quot;D - Triple Points&quot;,
&quot;R&quot;,&quot;R - Rebate&quot;, 
&quot;I&quot;,&quot;I - Ineligible&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>D - Triple Points, R - Rebate, I - Ineligible</inlineHelpText>
    <label>AMEX Eligibility Code</label>
    <type>Text</type>
</CustomField>