force-app/main/default/objects/Account/fields/AMEX_Eligibility_l__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Eligibility_l__c</fullName>
    <description>The company holds the American Express Qantas Corporate Card</description>
    <formula>IF( Aquire_Eligibility_f__c == &apos;Y&apos;,IMAGE(&quot;/resource/Amex&quot;,&quot;Amex_Logo&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>American Express Qantas Co-brand Card</inlineHelpText>
    <label>AMEX Eligibility</label>
    <type>Text</type>
</CustomField>