force-app/main/default/objects/Account/fields/AMEX_Membership__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Membership__c</fullName>
    <description>Represents AMEX Membership #</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AMEX Membership #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>