force-app/main/default/objects/Account/fields/AMEX_response_Code__c.field-meta.xml
<CustomField>
    <fullName>AMEX_response_Code__c</fullName>
    <description>Eligibility Code that gets sent to to AMEX.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>D - Double Points, R - Rebate, I - Ineligible</inlineHelpText>
    <label>AMEX Eligibility Code [System]</label>
    <length>1</length>
    <type>Text</type>
</CustomField>