force-app/main/default/objects/Account/fields/Aquire__c.field-meta.xml
<CustomField>
    <fullName>Aquire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set to TRUE if the Stage/Status for Aquire Product Registration is either &quot;Active&quot; or &quot;Pending&quot;.</description>
    <inlineHelpText>Agency is a member of the Qantas Business Rewards Program</inlineHelpText>
    <label>QBR</label>
    <type>Checkbox</type>
</CustomField>