force-app/main/default/objects/Account/fields/Aquire_Blocking_Classification__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Blocking_Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QBD Blocking Classification</label>
    <type>Checkbox</type>
</CustomField>