force-app/main/default/objects/Account/fields/Aquire_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Entity_Type__c</fullName>
    <description>Used to auto populate from Aquire profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>