force-app/main/default/objects/Account/fields/Aquire_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Membership_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>QBR Membership Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>