force-app/main/default/objects/Account/fields/Aquire_Override__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Override__c</fullName>
    <description>Override Aquire? (Aquire)</description>
    <label>QBR Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>