force-app/main/default/objects/Account/fields/Aquire_Override_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Override_End_Date__c</fullName>
    <defaultValue>DATE(3999,12,31)</defaultValue>
    <description>Field to capture Aquire Override End Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QBR Override End Date</label>
    <type>Date</type>
</CustomField>