force-app/main/default/objects/Account/fields/Aquire_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Override_Reason__c</fullName>
    <label>QBR Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company affiliated with a Company with the principal operation is to sell or resell travel</fullName>
            </value>
            <value>
                <fullName>Member of/ Affiliated with, a company that has a Qantas Corporate Airfares Agreement</fullName>
            </value>
            <value>
                <fullName>Principal place of business is outside of Australia</fullName>
            </value>
            <value>
                <fullName>Receiving third-party private airfares, discounts or rebates from Qantas</fullName>
            </value>
            <value>
                <fullName>SME dealing customer - point earn to be negotiated</fullName>
            </value>
            <value>
                <fullName>Suspension of airline point earn at commercial request</fullName>
            </value>
            <value>
                <fullName>Travel using the registered ABN is for leisure</fullName>
            </value>
            <value>
                <fullName>Other (full explanation required in SME Override Note)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>