force-app/main/default/objects/Account/fields/Aquire_System__c.field-meta.xml
<CustomField>
    <fullName>Aquire_System__c</fullName>
    <description>This is set to TRUE if the Stage/Status for Aquire Product Registration is &quot;Active&quot;.</description>
    <formula>No_of_Aquires__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Agency is a member of the Aquire Program</inlineHelpText>
    <label>Qantas Business Rewards (QBR)</label>
    <type>Checkbox</type>
</CustomField>