force-app/main/default/objects/Account/fields/At_Risk_Since__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Since__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>At Risk Since</label>
    <type>Date</type>
</CustomField>