force-app/main/default/objects/Account/fields/ATAS__c.field-meta.xml
<CustomField>
    <fullName>ATAS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the agencies AFTA Travel Accreditation Scheme Number</inlineHelpText>
    <label>ATAS Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>