force-app/main/default/objects/Account/fields/ATOL_Number__c.field-meta.xml
<CustomField>
    <fullName>ATOL_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Applicable only for UK &amp; Ireland Accounts</inlineHelpText>
    <label>ATOL Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>