force-app/main/default/objects/Account/fields/billing_address_id__c.field-meta.xml
<CustomField>
    <fullName>billing_address_id__c</fullName>
    <description>Field created as a result of SFDC and iDeal integration.</description>
    <inlineHelpText>The street address of the business</inlineHelpText>
    <label>Billing Address ID [System]</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>