force-app/main/default/objects/Account/fields/Billing_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Billing_Latitude__c</fullName>
    <description>Shipping address latitude details</description>
    <formula>BillingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing_Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>