force-app/main/default/objects/Account/fields/Business_Category__c.field-meta.xml
<CustomField>
    <fullName>Business_Category__c</fullName>
    <inlineHelpText>Created for CRM-9117</inlineHelpText>
    <label>Business Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AVI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>